--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,9 @@
 /* Importação de fonte do Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+/* Importação de ícones do Flaticon UI */
+@import url("https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css");
+
 :root {
   /* Paleta de cores */
   --cor01: #101c26;
@@ -50,6 +53,8 @@ header > div {
   max-width: 1240px;
   padding: 7px 10px 0 10px;
   margin: auto;
+  display: flex;
+  flex-direction: row;
 }
 
 /* Logo no header */
@@ -74,4 +79,50 @@ header > div {
   text-transform: uppercase;
   font-size: 1em;
   color: var(--cor06);
+}
+/* Menu nav */
+nav {
+  display: flex;
+  align-items: center;
+
+  margin-left: 20px;
+}
+nav ul {
+  list-style-type: none;
+  display: flex;
+}
+nav li {
+  padding-left: 19px;
+  padding-right: 19px;
+}
+nav li a {
+  color: var(--cor08);
+  text-decoration: none;
+  font-size: 1.2em;
+}
+
+#link-nav-pagina-atual {
+  color: var(--cor06);
+}
+/* Efeito hover no nav */
+nav li a:hover {
+  color: var(--cor02);
+}
+
+/* Botões de pesquisa do nav */
+#botoes-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+#botoes-nav button {
+  background: none;
+  border: none;
+
+  margin: 0 10px 0 10px;
+}
+#botoes-nav i {
+  /* Ícones dos botões */
+  color: var(--cor03);
+  font-size: 2em;
 }
