--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -42,16 +42,23 @@
   font-family: var(--fonte-corpo);
 }
 
+/* Padrões gerais do site */
+
+button {
+  cursor: pointer;
+}
+
 /* Cabeçalho */
 header {
   position: fixed;
   width: 100%;
+  height: 90px;
 
   background-color: var(--cor01);
 }
 header > div {
   max-width: 1240px;
-  padding: 7px 10px 0 10px;
+  padding: 10px 10px 0 10px;
   margin: auto;
   display: flex;
   flex-direction: row;
@@ -126,3 +133,59 @@ nav li a:hover {
   color: var(--cor03);
   font-size: 2em;
 }
+
+main {
+  padding-top: 90px;
+}
+
+/* Imagens com fundo */
+.imagem-fundo {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.fundo-fixo {
+  background-attachment: fixed;
+}
+.mascara {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 28, 38, 0.64);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Capa do site */
+.titulo-capa {
+  display: flex;
+}
+#capa {
+  height: calc(100vh - 90px);
+}
+
+#capa h1,
+#capa p {
+  text-transform: uppercase;
+}
+#capa h1 {
+  color: var(--cor08);
+  font-size: 5em;
+
+  margin-bottom: -20px;
+}
+#capa p {
+  color: var(--cor06);
+  font-size: 1.4em;
+
+  margin-left: 5px;
+}
+.titulo-capa-texto {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* RODAPÉ */
