--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -63,7 +63,8 @@ header {
   width: 100%;
   height: 90px;
 
-  background-color: var(--cor01);
+  background-color: #101c26cc;
+  backdrop-filter: blur(10px);
 }
 header > div {
   max-width: 1240px;
