Página Conta + Adição de novo produto

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,6 +5,7 @@
 
 /* Importação de ícones do Flaticon UI */
 @import url("https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css");
+@import url("https://cdn-uicons.flaticon.com/2.0.0/uicons-solid-straight/css/uicons-solid-straight.css");
 
 :root {
   /* Paleta de cores */
@@ -262,3 +263,7 @@ main {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 /* RODAPÉ */
+
+a {
+  text-decoration: none;
+}
