--- a/assets/styles/style-login.css
+++ b/assets/styles/style-login.css
@@ -47,9 +47,8 @@ body {
   background-color: rgba(242, 242, 242, 0.25);
   padding: 30px;
   border-radius: 10px;
-  margin-bottom: 50px;
 
-  display: flex;
+  display: none;
   justify-content: center;
   flex-direction: column;
 }
